--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <canvas style="border: 1px solid grey; width: 100%; height: 700px"></canvas>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/6.5.3/rxjs.umd.min.js"></script>
-    <script src="/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/6.5.3/rxjs.umd.min.js" defer></script>
+    <script src="/main.js" defer></script>
   </body>
 </html>
